--- a/src/scss/components/_main-section.scss
+++ b/src/scss/components/_main-section.scss
@@ -70,6 +70,7 @@
             background-repeat: no-repeat;
             padding-top: 250px;
             padding-bottom: 240px;
+            margin-right: -15px;
         }
         &-container {
             padding-right: 0;
